Add game endpoints
